# challenge_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/exploration_msgs/: ExploreAction.h  ExploreActionFeedback.h  ExploreActionGoal.h  ExploreActionResult.h  ExploreFeedback.h  ExploreGoal.h  ExploreResult.h  SetPolygon.h  SetPolygonRequest.h  SetPolygonResponse.h
devel/include/frontier_exploration/: ExploreTaskAction.h  ExploreTaskActionFeedback.h  ExploreTaskActionGoal.h  ExploreTaskActionResult.h  ExploreTaskFeedback.h  ExploreTaskGoal.h  ExploreTaskResult.h  Frontier.h
devel/include/nav2d_msgs/: LocalizedScan.h  RobotPose.h
devel/include/nav2d_navigator/: ExploreAction.h  ExploreActionFeedback.h  ExploreActionGoal.h  ExploreActionResult.h  ExploreFeedback.h  ExploreGoal.h  ExploreResult.h  GetFirstMapAction.h  GetFirstMapActionFeedback.h  GetFirstMapActionGoal.h  GetFirstMapActionResult.h  GetFirstMapFeedback.h  GetFirstMapGoal.h  GetFirstMapResult.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  (+11 more)
src/gazebo_senai/: CMakeLists.txt  package.xml
src/gazebo_senai/config/: config.rviz  custom_localization.yaml
src/gazebo_senai/launch/: exploration.launch  gazebo_husky.launch  gazebo_senai.launch  rviz.launch  rviz_husky.launch
src/gazebo_senai/meshes/: cylinder.dae
src/gazebo_senai/param/: ros.yaml
src/gazebo_senai/scripts/: mission.py
src/gazebo_senai/urdf/: kinect.urdf.xacro  vlp_16.urdf.xacro
src/gazebo_senai/world/: cimatec_world.world
src/scripts/: CMakeLists.txt
(+161 files in other folders)
