<?xml version="1.0"?>
<package format="2">
  <name>gazebo_senai</name>
  <version>0.0.0</version>
  <description>The gazebo package</description>

  
  <maintainer email="jessicalimamotta@gmail.com">Jessica Motta</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <exec_depend>gazebo</exec_depend>

  <export>

  </export>


</package>
